# MCPcrunch

./: .env.example  .gitignore  1.0.0.md  CHANGELOG.md  LICENSE  README.md  conformance_tests.md  pyproject.toml  schema.json  task.md  validations.md  walkthrough.md
examples/: CLI_REFERENCE.md  adversarial_poisoning.json  complex_shadowing.json  minimal_valid.json  notekeeper_average.json  prodmcp_average_example.py  prodmcp_test_example.py  taskforge_production.json  usage_guide.py  vulnerable_data_quality.json  vulnerable_security.json
src/mcpcrunch/: __init__.py  cli.py  engine.py  models.py  scoring.py
src/mcpcrunch/conformance/: __init__.py  client.py  models.py  reporter.py  runner.py  schema_mutator.py
src/mcpcrunch/conformance/tests/: __init__.py  determinism.py  error_handling.py  prompt_contract.py  resource_contract.py  schema_input.py  schema_output.py  security.py  server_contract.py  spec_integrity.py  tool_contract.py
src/mcpcrunch/llm/: base.py  gemini.py  openai.py
src/mcpcrunch/validators/: deterministic.py  semantic.py
tests/: test_42crunch_equivalence.py  test_cli.py  test_conformance_cli.py  test_conformance_client.py  test_conformance_models.py  test_conformance_reporter.py  test_conformance_runner.py  test_conformance_runtime.py  test_deterministic.py  test_engine.py  test_schema_mutator.py  test_scoring.py  test_semantic.py  test_spec_integrity.py
