[project]
name = "mcpcrunch"
version = "0.3.0"
description = "Comprehensive Security and Structural Validation Framework for the OpenMCP Specification"
authors = [
    { name = "Anish Chelliah CR", email = "anishchelliah.cr@google.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "openmcp", "security", "conformance", "validation", "audit", "ai", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ProdMCP/MCPcrunch"
Documentation = "https://github.com/ProdMCP/MCPcrunch#readme"
Repository = "https://github.com/ProdMCP/MCPcrunch"
Changelog = "https://github.com/ProdMCP/MCPcrunch/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ProdMCP/MCPcrunch/issues"

[project.scripts]
mcpcrunch = "mcpcrunch.cli:main"

[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcpcrunch = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["src/*"]
